chore: removed dead code and  added correct exits